--- a/style.css
+++ b/style.css
@@ -1,37 +1,50 @@
 body{
-    margin:0;
     text-align: center;
-    padding-top: 100px;
 }
 
-#pic{
-    width:250px;
-    height: 300px;
-    border-radius: 50%;
-}
-
-#home_page{
-    position:absolute;
+#home{
+    background:linear-gradient(#ADD8E6 0%, #90EE90 100%);
+    color: black;
+    padding-top: 250px;
+    width: 100%;
     height: 800px;
-    background:linear-gradient(#90EE90 0%, #ADD8E6 100%);
-    color:black;
-    width:100%;
-    padding-top: 200px;
     margin-bottom: 800px;
+    position: absolute;
+    z-index: 1;
+
 }
 
 #bio{
-    padding:100px;
-    background-color: rgb(255, 255, 255);
-    color:black;
-    height:1000px;
-    margin-top: 900px;
     font-size: 30px;
+    color:black;
+    background-color: white;
+    padding: 30px;
+    width: 100%;
+    height: 800px;
+    margin-top:1000px;
 }
 
-.line{
-    height: 6px;
-    width: 100px;
-    background-color: black;
-    margin:8px auto;
+#pic{
+    border-radius: 50%;
+    width: 250px;
+    height: 300px;
+}
+
+.menu{
+    list-style: none;
+    position: absolute;
+    margin-top: 10px;
+    margin-right: 30px;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.links{
+    float: left;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 20px;
+    color: black;
 }
